# wavecommitments

./: .gitignore  LICENSE  README.md  benchmark_commitment_results.json  environment.yml  full_process.sh  progress.md  pst_prove_and_verify_index.py
analysis/captum/er/: analysis_summary.json
analysis/captum/er/data_shapley/: data_shapley_summary.json  pydvl_data_shapley_summary.json  pydvl_data_shapley_values.npy  train_speaker_ids.npy
analysis/captum/er/data_shapley/Ses01_F/: data_shapley_inter.npy  data_shapley_intra.npy
analysis/captum/er/data_shapley/Ses01_M/: data_shapley_inter.npy  data_shapley_intra.npy
analysis/captum/er/data_shapley/Ses02_F/: data_shapley_inter.npy  data_shapley_intra.npy
analysis/captum/er/data_shapley/Ses02_M/: data_shapley_inter.npy  data_shapley_intra.npy
analysis/captum/er/data_shapley/Ses03_F/: data_shapley_inter.npy  data_shapley_intra.npy
analysis/captum/er/data_shapley/Ses03_M/: data_shapley_inter.npy  data_shapley_intra.npy
analysis/captum/er/data_shapley/Ses04_F/: data_shapley_inter.npy  data_shapley_intra.npy
analysis/captum/er/data_shapley/Ses04_M/: data_shapley_inter.npy  data_shapley_intra.npy
analysis/captum/er/data_shapley/Ses05_F/: data_shapley_inter.npy  data_shapley_intra.npy
analysis/captum/er/data_shapley/Ses05_M/: data_shapley_inter.npy  data_shapley_intra.npy
analysis/captum/er/data_shapley/angry/: pydvl_data_shapley.npy
analysis/captum/er/data_shapley/disgust/: pydvl_data_shapley.npy
analysis/captum/er/data_shapley/dr1-fvmh0/: data_shapley_inter.npy  data_shapley_intra.npy  pydvl_data_shapley.npy
analysis/captum/er/data_shapley/dr1-mcpm0/: data_shapley_inter.npy  data_shapley_intra.npy  (+1 more)
analysis/captum/er/data_shapley_pydvl/: data_shapley_pydvl_summary.json
analysis/captum/er/integrated_gradients/: integratedgradients_summary.json
analysis/captum/er/shapley/: shapley_summary.json
analysis/captum/er/tracin/: checkpoint_info.json
analysis/captum/sid/: analysis_summary.json
analysis/captum/sid/data_shapley/: pydvl_data_shapley_summary.json  pydvl_data_shapley_values.npy  train_labels.npy
analysis/captum/sid/visualizations/: README.md
analysis/captum_bench_profiles/: profile_benchmark_aggressive.json
analysis/captum_bench_profiles/aggr_1gpu_jobs4_overlap/sid/: analysis_summary.json
analysis/captum_bench_profiles/comparisons/: iemocap_er_speaker_boxplot_baseline_vs_jobs4_vs_jobs8_stats.csv  iemocap_jobs8_sid_vs_er_speaker_boxplot_side_by_side_normalized_zscore_stats.csv  iemocap_jobs8_sid_vs_er_speaker_boxplot_side_by_side_stats.csv
datasets/: readme.md
embeddings/: readme.md
libs/: readme.md
libs/TensorCommitment/: LICENSE  README.md  environment.yml  install.sh
libs/TensorCommitment/CleanPegasus/bindings/python/: README.md  pyproject.toml
libs/TensorCommitment/CleanPegasus/bindings/python/demo/: new_verkle_demo_metrics.py  new_verkle_demo_metrics_file.py  sweep_simulations.py
libs/TensorCommitment/CleanPegasus/bindings/python/src/pegasus_verkle/: __init__.py  verkle.py  verkle_new.py
libs/TensorCommitment/CleanPegasus/verkle-tree/: Cargo.toml
libs/TensorCommitment/activationCaptureLib/: README.md  capture_activations.py  convert_to_npy.py  reshape_to_hypercube.py
libs/TensorCommitment/experiments/: README.md  extract_weight_norms.py  generate_budget_cases.py  model_utils.py  plot_dimension_benchmark.py  plot_results.py  run_all_models.py  run_all_sweeps.py  run_benchmarks.py  run_experiment_benchmarks.py  run_full_benchmark.py  sweep_merkle.py  sweep_terkle.py  sweep_verkle.py
libs/TensorCommitment/experiments/layer_analysis_experiments/: README.md  extract_layer_scores.py  run_layer_analysis.sh  visualize_scores.py
libs/TensorCommitment/experiments/results/: dimension_benchmark copy.jsonl  dimension_benchmark.jsonl
libs/TensorCommitment/experiments/scalability_experiments/: generate_scalability_cases.py  plot_scalability.py  run_scalability_benchmarks.py
libs/TensorCommitment/interpolationLib/: README.md  interpolate_hypercube.py
libs/TensorCommitment/layerSelectionLib/: README.md  extract_values_from_LLMs.sh  run_layer_selection.py
libs/TensorCommitment/layerSelectionLib/AlphaPruning/: README.md  compute_metrics_for_new_model.py  extract_significance_scores.py  test_significance_extraction.py
libs/TensorCommitment/layerSelectionLib/OptimizationModule/: __init__.py  layer_selection_optimizer.py  optimize_layers.py  run_optimization.py  scores_loader.py  test_optimizer.py
libs/TensorCommitment/layerSelectionLib/layer_selection_integration/: __init__.py  extract_layer_scores.py  visualize_scores.py
libs/TensorCommitment/merkle/: Cargo.toml  README.md  pyproject.toml
libs/TensorCommitment/merkle/python_demo/: sweep_simulations.py
libs/TensorCommitment/merkle/python_demo/final_prover_verifier/: run_demo.py
libs/TensorCommitment/merkle/src/: lib.rs  python.rs
libs/TensorCommitment/pst_commitment_lib/: Cargo.toml  README.md  build_python.sh  interpolate_and_commit.py  no_saving_time_version.py  prover_verifier.py  requirements.txt
libs/TensorCommitment/pst_commitment_lib/poly_interp_demo/: =1.5.0  Cargo.toml  v1_Cargo.toml
libs/TensorCommitment/pst_commitment_lib/poly_interp_demo/src/: main.rs  v1_cpuparallel_scalable_main.rs
libs/TensorCommitment/pst_commitment_lib/src/: ip.rs  lib.rs  rp.rs
libs/TensorCommitment/tensorCommitmentLib/: Cargo.toml  README.md  commit_prove_verify.py  pyo3_bindings.rs  pyproject.toml
libs/TensorCommitment/tensorCommitmentLib/benches/: bench-zk.rs  bench.rs
libs/TensorCommitment/tensorCommitmentLib/src/: lib.rs
libs/TensorCommitment/terkleLib/: Cargo.toml  pyproject.toml
libs/TensorCommitment/terkleLib/src/: lagrange.rs  lib.rs  python.rs
models/: readme.md
scripts/: benchmark_commitment_pipeline.py  benchmark_pydvl_profiles.py  benchmark_pydvl_single_gpu_concurrency.py  build_commitments.py  captum_analysis.py  download_iemocap.py  download_models.py  download_speech_commands.py  extract_embeddings.py  pst_build_speaker_commitment.py  pst_verify_saved_proof.py  verify_setup.py  visualize_captum.py
(+439 files in other folders)
