[package]
name = "multibranch-merkle"
version = "0.1.0"
edition = "2021"
description = "Configurable-arity Merkle trees with proof generation and Python bindings"
license = "BSD-3-Clause"
repository = "https://github.com/SpinResearch/merkle.rs"
keywords = ["merkle", "pyo3", "cryptography"]
categories = ["cryptography", "data-structures"]

[lib]
name = "multibranch_merkle"
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3"]

[dependencies]
hex = "0.4"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.pyo3]
version = "0.22"
features = ["extension-module", "abi3-py310"]
optional = true

[dev-dependencies]
rand = "0.8"
