[build-system]
requires = ["maturin>=1.6,<2.0"]
build-backend = "maturin"

[project]
name = "multibranch-merkle"
version = "0.1.0"
description = "Configurable-arity Merkle trees with Python bindings"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Spin Research" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
]
dependencies = ["numpy>=1.26"]

[tool.maturin]
features = ["python"]

