[package]
name = "theseus"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ec = "^0.5.0"
ark-ff = { version = "^0.5.0", features = ["asm"] }
ark-poly = "^0.5.0"
ark-std = "^0.5.0"
ark-serialize = "^0.5.0"
ark-poly-commit = "^0.5.0"
rand = "0.8.5"
rayon = "1.7.0"
num-bigint = "0.4"
num-integer = "0.1"
blake2 = "0.10.6"
spongefish = { git = "https://github.com/arkworks-rs/spongefish", features = ["arkworks-algebra"] }

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "num-bigint"], optional = true }
hex = { version = "0.4", optional = true }
ark-bn254 = { version = "^0.5.0", optional = true }

[dev-dependencies]
ark-bn254 = "^0.5.0"

[features]
default = ["parallel"]

parallel = [ 
    "ark-std/parallel", 
    "ark-ff/parallel",  
    "ark-ec/parallel",  
    "ark-poly/parallel", 
    "ark-poly-commit/parallel", 
]

python = [
    "pyo3",
    "hex",
    "ark-bn254",
]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

# Python module configuration
[lib]
name = "tensorcommitments"
crate-type = ["cdylib"]