[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "tensorcommitments"
version = "0.1.0"
description = "Tensor commitment library using PST polynomial commitments for multivariate polynomials"
requires-python = ">=3.9"
authors = [{ name = "ICML Contributors" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
]

[tool.maturin]
features = ["python"]
