[package]
name = "terkle"
version = "0.1.0"
edition = "2021"
description = "Multidimensional Verkle tree (Terkle) using multivariate Lagrange interpolation with MMP/PST commitments."

[lib]
name = "terkle"
crate-type = ["rlib", "cdylib"]

[dependencies]
ark-ec = "^0.5.0"
ark-ff = { version = "^0.5.0", features = ["asm"] }
ark-serialize = "^0.5.0"
ark-std = "^0.5.0"
ark-bn254 = "^0.5.0"
ark-poly = "^0.5.0"
rand = "0.8"
thiserror = "1.0"
hex = "0.4"
tensor_commitment_lib = { path = "../tensorCommitmentLib", package = "tensorcommitpackage" }
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py39"], optional = true }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
python = ["pyo3"]

[dev-dependencies]
rand = "0.8"

