[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "terkle"
version = "0.1.0"
description = "Multivariate Verkle tree (Terkle) using MMP/PST polynomial commitments"
requires-python = ">=3.9"
authors = [{ name = "ICML Contributors" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
]

[tool.maturin]
features = ["python"]
